src/styles/sass/_preset.scss
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

html {
    height: 100%;
    font-size: 1rem;
}

body {
    min-height: 100%;
    font-family: system-ui, sans-serif;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-size: inherit;
    font-weight: inherit;
}

ol,
ul {
    list-style: none;
}

img,
svg {
    display: block;
    vertical-align: middle;
}

a {
    color: unset;
}

*,
::before,
::after {
    border-width: 0;
    border-style: solid;
}

